# AntonaStandard

./: .gitignore  .gitmodules  AntonaStandardConfig.cmake.in  AntonaStandardInfo.h.in  CMakeLists.txt  Doxyfile  Improvement Report.md  README.en.md  README.md
AntonaStandard_introduction/AntonaMath/: Fraction分数类库.md  LinearAlgebra线性代数算法库.md  Numbers数字与运算库.md
AntonaStandard_introduction/Antona_foreach/: Antona_foreach说明.md
AntonaStandard_introduction/AutoNode/: AutoNode自动结点类库.md
AntonaStandard_introduction/Dedicate/: Delegate事件委托类库.md
AntonaStandard_introduction/Delegate/: Delegate事件委托类库.md
AntonaStandard_introduction/Exception/: Exception异常类库.md
AntonaStandard_introduction/Filter/: 运行时类型识别和处理库_过滤器Filter.md
AntonaStandard_introduction/Math/: Fraction分数类库.md
AntonaStandard_introduction/MultiPlatformSupport/: MultiPlatformSupport多平台支持.md
AntonaStandard_introduction/Reflaction/: Reflaction反射.md
AntonaStandard_introduction/ThreadConcurrentTools/: Sem_Extension信号量扩展库.md  ThreadConcurrentTools线程并发编程工具库.md  ThreadsPool线程池库.md
CPS/: CMakeLists.txt  CPS.staticConfig.cmake.in  CPSConfig.cmake.in
CPS/examples/: CMakeLists.txt
CPS/examples/Dll/: CMakeLists.txt  CPS_Dll.cpp
CPS/examples/Socket/: CMakeLists.txt  TcpClient.cpp  TcpClientV6.cpp  TcpServer.cpp  TcpServerV6.cpp  UdpClient.cpp  UdpClientV6.cpp  UdpServerV6.cpp
CPS/include/CPS/: Dll.h  Macros.h  Socket.h  Socket.hpp
CPS/src/: Dll.cpp  Socket.cpp
CPS/tests/: CMakeLists.txt
Globals/: CMakeLists.txt  Globals.staticConfig.cmake.in  GlobalsConfig.cmake.in
Globals/src/: Exception.cpp
Globals/tests/: CMakeLists.txt
Math/: CMakeLists.txt  Math.staticConfig.cmake.in  MathConfig.cmake.in
Math/examples/: CMakeLists.txt
Math/examples/Fraction/: CMakeLists.txt  Math_Fraction.cpp
Math/include/Math/: Fraction.h
Math/src/: Fraction.cpp
Math/tests/: CMakeLists.txt
Math/tests/Fraction/: CMakeLists.txt  Test_Fraction.cpp
Network/: CMakeLists.txt  Network.staticConfig.cmake.in  NetworkConfig.cmake.in
Network/examples/: CMakeLists.txt
Network/examples/Socket/: CMakeLists.txt  TcpClient.cpp  TcpClientV6.cpp  UdpClient.cpp  UdpClientV6.cpp  UdpServer.cpp  UdpServerV6.cpp
Network/include/Network/: Socket.h
Network/src/: Socket.cpp
Network/tests/: CMakeLists.txt
TestingSupport/: CMakeLists.txt  TestingSupport.staticConfig.cmake.in  TestingSupportConfig.cmake.in
ThreadTools/: CMakeLists.txt  ThreadTools.staticConfig.cmake.in  ThreadToolsConfig.cmake.in
ThreadTools/examples/: CMakeLists.txt
ThreadTools/examples/ThreadsPool/: CMakeLists.txt  ThreadsPool.cpp
ThreadTools/src/: ThreadsPool.cpp
ThreadTools/tests/: CMakeLists.txt
Utilities/: CMakeLists.txt  Utilities.staticConfig.cmake.in  UtilitiesConfig.cmake.in
Utilities/examples/: CMakeLists.txt
Utilities/examples/Antona_foreach/: CMakeLists.txt  Utilities_Antona_foreach.cpp
Utilities/examples/Delegate/: CMakeLists.txt  Utilities_Delegate.cpp
Utilities/examples/Reflection/: CMakeLists.txt  Utilities_Reflection.cpp
examples/: CMakeLists.txt
examples/AntonaMath/: CMakeLists.txt  demo.cpp
examples/Antona_foreach/: CMakeLists.txt  demo.cpp
examples/AutoNode/: CMakeLists.txt  demo.cpp
examples/CPS.Dll/: CMakeLists.txt  demo.cpp  funcs.cpp  funcs.h
examples/CPS.Socket/: CMakeLists.txt  TcpClient.cpp  TcpClientV6.cpp  TcpServer.cpp  TcpServerV6.cpp  UdpClient.cpp  UdpClientV6.cpp  UdpServer.cpp  UdpServerV6.cpp
examples/Delegate/: CMakeLists.txt  demo.cpp
examples/DllSupport/: CMakeLists.txt  demo.cpp  funcs.cpp  funcs.h
examples/Math/: demo.cpp
examples/Math.Fraction/: CMakeLists.txt  demo.cpp
examples/Network/: TcpClient.cpp  TcpServer.cpp
examples/Network.Socket/: CMakeLists.txt  TcpClientV6.cpp  TcpServer.cpp  TcpServerV6.cpp  UdpClient.cpp  UdpClientV6.cpp  UdpServer.cpp  UdpServerV6.cpp
examples/Reflection/: CMakeLists.txt  demo.cpp
examples/Sem_Extension/: CMakeLists.txt  demo1.cpp  demo2.cpp
examples/SocketSupport/: CMakeLists.txt  TcpClient.cpp  TcpClientV6.cpp  TcpServer.cpp  TcpServerV6.cpp  UdpClient.cpp  UdpClientV6.cpp  UdpServer.cpp  UdpServerV6.cpp
examples/ThreadConcurrentTools/: CMakeLists.txt  demo1.cpp  demo2.cpp
examples/ThreadTools.Sem_Extension/: CMakeLists.txt  demo1.cpp  demo2.cpp
examples/ThreadTools.ThreadsPool/: CMakeLists.txt  demo.cpp
examples/ThreadsPool/: demo.cpp
examples/TypeFilter/: CMakeLists.txt  demo.cpp
examples/Utilities.Antona_foreach/: CMakeLists.txt  demo.cpp
examples/Utilities.Delegate/: CMakeLists.txt  demo.cpp
examples/Utilities.Reflection/: CMakeLists.txt  demo.cpp
include/: Antona_foreach.h  AutoNode.cpp  AutoNode.h  Delegate.h  Exception.cpp  Exception.h  Filter.h  Fraction.h  Reflection.h  Sem_Extension.h  TypeFilter.h  VSCode_CMake引入说明.txt
include/CPS/: Dll.h  (+3 more)
lib/: CMakeLists.txt
src/: CPS.Dll.cpp  CPS.Socket.cpp  DllSupport.cpp  Exception.cpp  Fraction.cpp  Globals.Exception.cpp  Math.Fraction.cpp  Network.Socket.cpp  Reflection.cpp  Socket.cpp  SocketSupport.cpp  ThreadsPool.cpp  Utilities.Reflection.cpp  Utilities.ThreadsPool.cpp
testing_set/: CMakeLists.txt
testing_set/CoverageStatistic/: CreateFromDirBuild1.sh  test.info
testing_set/Math/: CMakeLists.txt
testing_set/Math/Fraction/: CMakeLists.txt  Test_Fraction.cpp
testing_set/MultiPlatformSupport/: CMakeLists.txt
testing_set/MultiPlatformSupport/DllSupport/: CMakeLists.txt  ImplementA.cpp  ImplementB.cpp  Interfaces.h  Test_DllSupport.cpp
testing_set/MultiPlatformSupport/SocketSupport/: CMakeLists.txt  Test_SocketSupport.cpp
testing_set/ThreadTools/: CMakeLists.txt
testing_set/ThreadTools/Sem_Extension/: CMakeLists.txt  Test_Sem_Extension.cpp
testing_set/ThreadTools/ThreadsPool/: CMakeLists.txt  Test_ThreadsPool.cpp
testing_set/Utilities/: CMakeLists.txt
testing_set/Utilities/Antona_foreach/: CMakeLists.txt  Test_Antona_foreach.cpp
testing_set/Utilities/Delegate/: CMakeLists.txt  Test_Delegate.cpp
testing_set/Utilities/Reflection/: CMakeLists.txt  Test_Reflection.cpp
testing_set/Utilities/ThreadSafeQueue/: CMakeLists.txt  Test_ThreadSafeQueue.cpp
(+48 files in other folders)
